--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,74 @@
     background-color: #1F2937;
 }
 
+
 .headerlinks a{
+    color: rgb(194, 181, 181);
+    font-size: 18px;
+}
+
+.header{
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo{
+    font-size: 24px;
     color: #F9FAF8;
 }
+
+.hook img{
+    width: 100%;
+    height: 100%;
+}
+
+.hook{
+    display: flex;
+    gap: 20px;
+    height: 250px;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.hook-desc .cap{
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.hook-desc .desc{
+    font-size: 18px;
+    color: grey;
+}
+
+.section1{
+    margin: 20px;
+    margin-right:150px;
+    margin-left: 150px; 
+}
+
+.hook-desc{
+    display:flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+    width: 90%;
+}
+
+.hook-desc button{
+    height: 30px;
+    width: 100px;
+    flex-grow: 0;
+    background-color: #3882F6;
+    color: white;
+    border-radius: 10px;
+}
+
+.header .headerlinks{
+    display: flex;
+    gap: 10px;
+}
+
+
+
