--- a/css/style.css
+++ b/css/style.css
@@ -71,5 +71,59 @@
     gap: 10px;
 }
 
+.header2{
+    display: flex;
+    font-size: 36px;
+    width: 100%;
+    background-color: white;
+    font-weight: 900;
+    color: black;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+}
+.infotext .text, .img{
+    background-color: white;
+    color: black;
+}
+
+.infotext{
+    height: 250px;
+    display:flex;
+}
+
+.infotext img{
+    height: 100px;
+    width: 100px;
+}
+
+.infotext .img{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text{
+    text-align: center;
+    width:40%;
+}
+
+.info{
+    display:flex;
+}
+
+.img.first{
+
+}
+
+
+
+
+
+
+
+
+
 
 
